--- a/inicianteBasico2.html
+++ b/inicianteBasico2.html
@@ -74,7 +74,7 @@ http://www.templatemo.com/tm-512-moonlights
 
     <nav>
         <div class="logo">
-            <img src="Colorful Artificial Intelligence Logo (200 × 60 px).png" alt="">
+            <img src="Colorful Artificial Intelligence Logo.png" alt="">
         </div>
         <div class="mini-logo">
             <img src="Colorful Artificial Intelligence Logo 1.png" alt="">
