--- a/index.html
+++ b/index.html
@@ -2479,13 +2479,10 @@ http://www.templatemo.com/tm-512-moonlights
             };
         }
 
-
-        function linkar() {
-            window.location = "https://www.cognitoforms.com/JackSilva1/TesteDeIngl%C3%AAs";
+    function linkar() {
+            window.open('https://www.gamestolearnenglish.com/hangman/', '_blank');
 
         }
-
-
 
 
     </script>
