--- a/index.html
+++ b/index.html
@@ -2480,7 +2480,7 @@ http://www.templatemo.com/tm-512-moonlights
         }
 
     function linkar() {
-            window.open('https://www.gamestolearnenglish.com/hangman/', '_blank');
+            window.open('https://www.cognitoforms.com/JackSilva1/TesteDeIngl%C3%AAs', '_blank');
 
         }
 
