--- a/inicianteBasico4.html
+++ b/inicianteBasico4.html
@@ -2535,8 +2535,8 @@ http://www.templatemo.com/tm-512-moonlights
         }
 
 
-        function linkar() {
-            window.open('https://www.gamestolearnenglish.com/hangman/', '_blank');
+      function linkar() {
+            window.open('https://www.cognitoforms.com/JackSilva1/TesteDeIngl%C3%AAs', '_blank');
 
         }
         //
