--- a/inicianteBasico3.html
+++ b/inicianteBasico3.html
@@ -2147,7 +2147,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-effect">
                                             <div class="hover-content">
                                                 <h2>vocabulario e leitura</h2>
-                                                <p>25 a 32 minutos/p>
+                                                <p>25 a 32 minutos</p>
                                             </div>
                                         </div>
 
