--- a/inicianteBasico4.html
+++ b/inicianteBasico4.html
@@ -920,7 +920,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(verbo to be)</h2>
-                                            <p>1035 a 42 minutos</p>
+                                            <p>10 a 15 minutos0</p>
                                         </div>
                                     </div>
 
@@ -1138,7 +1138,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(verbo to be)</h2>
-                                            <p>1035 a 42 minutos</p>
+                                            <p>10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1265,7 +1265,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>teste(verbo to be)</h2>
-                                            <35 a 42 minutos </p>
+                                            <p>35 a 42 minutos </p>
                                         </div>
                                     </div>
 
