--- a/medio1.html
+++ b/medio1.html
@@ -322,7 +322,7 @@ http://www.templatemo.com/tm-512-moonlights
                     </div>
 
 
-                    <div class="row">]
+                    <div class="row">
 
                         <h3 style="color:white;">Terça</h3>
                         <div class="col-md-4 col-sm-6">
@@ -420,7 +420,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(comparativos e superlativos)</h2>
-                                            <p>7 a 9 minutos</p>
+                                            <p>10 A 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -552,7 +552,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(comparativos e superlativos)</h2>
-                                            <p> 7 a 9 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -735,7 +735,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>teste(comparativos e superlativos)</h2>
-                                            <p> 137 a 9 minutos
+                                            <p> 15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -889,7 +889,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(falsos cognatos)</h2>
-                                            <p7 a 9 minutos</p>
+                                            <p>15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1237,7 +1237,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(falsos cognatos)</h2>
-                                            <p> 137 a 9 minutos.</p>
+                                            <p> 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1479,7 +1479,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-effect">
                                             <div class="hover-content">
                                                 <h2>Aula(verbos modais)</h2>
-                                                <p7 a 9 minutos</p>
+                                                <p> 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -1663,7 +1663,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-effect">
                                             <div class="hover-content">
                                                 <h2>Aula(verbos modais)</h2>
-                                                <p>7 a 9 minutos</p>
+                                                <p>10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -1791,7 +1791,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(verbos modais)</h2>
-                                            <p> 137 a 9 minutos.</p>
+                                            <p> 15 minutos </p>
                                         </div>
                                     </div>
 
@@ -2021,7 +2021,7 @@ http://www.templatemo.com/tm-512-moonlights
                                             <div class="hover-content">
                                                 <h2>Aula(passado simples)</h2>
                                                 <p>
-                                                    7 a 9 minutos</p>
+                                                    10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -2251,7 +2251,7 @@ http://www.templatemo.com/tm-512-moonlights
                                             <div class="hover-content">
                                                 <h2>Aula(passado simples)</h2>
                                                 <p>
-                                                    7 a 9 minutos</p>
+                                                   10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -2385,7 +2385,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Teste(passado simples)</h2>
                                             <p>
-                                                137 a 9 minutos
+                                                15 minutos
                                             </p>
                                         </div>
                                     </div>
