--- a/medio4.html
+++ b/medio4.html
@@ -419,7 +419,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(comparativos e superlativos)</h2>
-                                            <p> 8 a 10 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -551,7 +551,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(comparativos e superlativos)</h2>
-                                            <p> 13 a 15 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -734,7 +734,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>teste(comparativos e superlativos)</h2>
-                                            <p> 13 a 15 a minutos
+                                            <p> 15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -888,7 +888,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(falsos cognatos)</h2>
-                                            <p>8 a 10 minutos</p>
+                                            <p>10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1109,7 +1109,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(falsos cognatos)</h2>
-                                            <p>35 a 42 minutos</p>
+                                            <p>10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1236,7 +1236,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(falsos cognatos)</h2>
-                                            <p> 13 a 15 a minutos.</p>
+                                            <p> 15 minutos.</p>
                                         </div>
                                     </div>
 
@@ -1478,7 +1478,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-effect">
                                             <div class="hover-content">
                                                 <h2>Aula(verbos modais)</h2>
-                                                <p>8 a 10 minutos</p>
+                                                <p>10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -1662,7 +1662,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-effect">
                                             <div class="hover-content">
                                                 <h2>Aula(verbos modais)</h2>
-                                                <p>12 a 15 minutos</p>
+                                                <p>10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -1790,7 +1790,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(verbos modais)</h2>
-                                            <p> 13 a 15 a minutos.</p>
+                                            <p> 15 minutos.</p>
                                         </div>
                                     </div>
 
@@ -2020,7 +2020,7 @@ http://www.templatemo.com/tm-512-moonlights
                                             <div class="hover-content">
                                                 <h2>Aula(passado simples)</h2>
                                                 <p>
-                                                    8 a 10 minutos</p>
+                                                   10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -2250,7 +2250,7 @@ http://www.templatemo.com/tm-512-moonlights
                                             <div class="hover-content">
                                                 <h2>Aula(passado simples)</h2>
                                                 <p>
-                                                    8 a 10 minutos</p>
+                                                    10 a 15 minutos</p>
                                             </div>
                                         </div>
 
@@ -2384,7 +2384,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Teste(passado simples)</h2>
                                             <p>
-                                                13 a 15 a minutos
+                                                 15 minutos
                                             </p>
                                         </div>
                                     </div>
