--- a/medio2.html
+++ b/medio2.html
@@ -321,7 +321,7 @@ http://www.templatemo.com/tm-512-moonlights
                     </div>
 
 
-                    <div class="row">]
+                    <div class="row">
 
                         <h3 style="color:white;">Terça</h3>
                         <div class="col-md-4 col-sm-6">
@@ -734,7 +734,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>teste(comparativos e superlativos)</h2>
-                                            <p> 15 a minutos
+                                            <p> 15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -1236,7 +1236,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(falsos cognatos)</h2>
-                                            <p> 15 a minutos.</p>
+                                            <p> 15 minutos.</p>
                                         </div>
                                     </div>
 
@@ -1790,7 +1790,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(verbos modais)</h2>
-                                            <p> 15 a minutos.</p>
+                                            <p> 15 minutos.</p>
                                         </div>
                                     </div>
 
@@ -2384,7 +2384,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Teste(passado simples)</h2>
                                             <p>
-                                             15 a minutos
+                                             15 minutos
                                             </p>
                                         </div>
                                     </div>
