--- a/medio2.html
+++ b/medio2.html
@@ -95,7 +95,7 @@ http://www.templatemo.com/tm-512-moonlights
                     <div class="col-md-3">
                         <div class="author-image"><img src="logo feira ok.png" alt=""></div>
                     </div>
-                    <div class="col15 a 20">
+                    <div class="col-md-9">
                         <h2>TalkNow</h2>
                         <p>TalkNow é a melhor plataforma para você aprender inglês de maneira interativa, dinãmica e
                             divertida</p>
@@ -109,6 +109,7 @@ http://www.templatemo.com/tm-512-moonlights
                 </div>
             </div>
         </div>
+
         <div class="slide" id="2">
             <div class="content second-content">
                 <div class="container-fluid">
