--- a/AvançadoFluente3.html
+++ b/AvançadoFluente3.html
@@ -419,7 +419,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(pronomes interrogativos)</h2>
-                                            <p> 825 a 32 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -640,7 +640,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(future tense)</h2>
-                                            <p> 1025 a 32 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -718,7 +718,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(afixos)</h2>
-                                            <p>1025 a 32 minutos</p>
+                                            <p>10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -735,7 +735,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(future tense,afixos e pronomes interrogativos)</h2>
-                                            25 a 32 minutos
+                                            <p>15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -848,7 +848,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Aula(cognatos e falsos cognatos)</h2>
                                             <p>
-                                                1025 a 32 minutos
+                                                10 a 15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -979,7 +979,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(futuro contínuo)</h2>
-                                            <p> 1025 a 32 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1201,7 +1201,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(verbos modais)</h2>
-                                            <p> 1025 a 32 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1224,7 +1224,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>teste(Cognatos, falsos cognatos e verbos modais)</h2>
-                                            25 a 32 minutos</p>
+                                            <p>15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1313,7 +1313,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(perfect future e continuos future)</h2>
-                                            25 a 32 minutos</p>
+                                            <p>15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1409,7 +1409,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Aula(Concetivos)</h2>
                                             <p>
-                                                1025 a 32 minutos
+                                                10 a 15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -1540,7 +1540,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(Conectivos)</h2>
-                                            <p> 1025 a 32 minutos</p>
+                                            <p> 10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1785,7 +1785,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(Exercícios de Conectivos em Inglês)</h2>
-                                            25 a 32 minutos</p>
+                                            <p> 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -2031,7 +2031,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Aula(passado perfeito)</h2>
                                             <p>
-                                                1025 a 32 minutos</p>
+                                                10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -2256,7 +2256,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Aula(passado perfeito)</h2>
                                             <p>
-                                                1025 a 32 minutos</p>
+                                                10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -2370,7 +2370,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Aula(passado perfeito)</h2>
-                                            <p>25 a 32 minutos</p>
+                                            <p>10 a 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -2405,7 +2405,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(Passado perfeto)</h2>
-                                            25 a 32 minutos</p>
+                                            <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
 
