--- a/AvançadoFluente2.html
+++ b/AvançadoFluente2.html
@@ -735,7 +735,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(future tense,afixos e pronomes interrogativos)</h2>
-                                            <p>15 a 20 minutos
+                                            <p>15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -1224,7 +1224,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>teste(Cognatos, falsos cognatos e verbos modais)</h2>
-                                            <p>15 a 20 minutos</p>
+                                            <p>15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1313,7 +1313,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(perfect future e continuos future)</h2>
-                                           <p> 15 a 20 minutos</p>
+                                           <p> 15 minutos</p>
                                         </div>
                                     </div>
 
@@ -1785,7 +1785,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(Exercícios de Conectivos em Inglês)</h2>
-                                           <p>15 a 20 minutos</p>
+                                           <p>15 minutos</p>
                                         </div>
                                     </div>
 
@@ -2405,7 +2405,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(Passado perfeto)</h2>
-                                            <p>15 a 20 minutos</p>
+                                            <p>15 minutos</p>
                                         </div>
                                     </div>
 
