--- a/AvançadoFluente3.html
+++ b/AvançadoFluente3.html
@@ -2405,7 +2405,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(Passado perfeto)</h2>
-                                            <p>25 a 32 minutos</p>
+                                            <p>15 minutos</p>
                                         </div>
                                     </div>
 
