--- a/AvançadoFluente4.html
+++ b/AvançadoFluente4.html
@@ -1409,7 +1409,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Aula(Concetivos)</h2>
                                             <p>
-                                                1035 a 42 minutos
+                                                10 a 15 minutos
                                             </p>
                                         </div>
                                     </div>
@@ -1785,7 +1785,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     <div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Teste(Exercícios de Conectivos em Inglês)</h2>
-                                            35 a 42 minutos</p>
+                                            <p>35 a 42 minutos</p>
                                         </div>
                                     </div>
 
@@ -2031,7 +2031,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-content">
                                             <h2>Aula(passado perfeito)</h2>
                                             <p>
-                                                1035 a 42 minutos</p>
+                                                10 a 15 minutos</p>
                                         </div>
                                     </div>
 
