--- a/inicianteBasico1.html
+++ b/inicianteBasico1.html
@@ -520,7 +520,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     </div>
 
                                     <div class="image">
-                                        <img src="caçapalavra1.jpg">
+                                        <img src="minigames.png">
                                     </div>
                                 </div>
                             </div>
@@ -739,7 +739,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     </div>
 
                                     <div class="image">
-                                        <img src="caçapalavra1.jpg">
+                                        <img src="minigames.png">
                                     </div>
                                 </div>
                             </div>
@@ -2149,7 +2149,7 @@ http://www.templatemo.com/tm-512-moonlights
                                         <div class="hover-effect">
                                             <div class="hover-content">
                                                 <h2>vocabulario e leitura</h2>
-                                                <p>7 a 9 minutos/p>
+                                                <p>7 a 9 minutos</p>
                                             </div>
                                         </div>
 
