--- a/inicianteBasico2.html
+++ b/inicianteBasico2.html
@@ -520,7 +520,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     </div>
 
                                     <div class="image">
-                                        <img src="caçapalavra1.jpg">
+                                        <img src="minigames.png">
                                     </div>
                                 </div>
                             </div>
@@ -739,7 +739,7 @@ http://www.templatemo.com/tm-512-moonlights
                                     </div>
 
                                     <div class="image">
-                                        <img src="caçapalavra1.jpg">
+                                        <img src="minigames.png">
                                     </div>
                                 </div>
                             </div>
