--- a/medio3.html
+++ b/medio3.html
@@ -490,7 +490,7 @@ http://www.templatemo.com/tm-512-moonlights
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <div class="item" onclick="Multi()">
+                            <div class="item" onclick="multi()">
                                 <div class="thumb">
 
                                     <div class="hover-effect">
@@ -712,7 +712,7 @@ http://www.templatemo.com/tm-512-moonlights
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <div class="item" onclick="Multi()">
+                            <div class="item" onclick="multi()">
                                 <div class="thumb">
 
                                     <div class="hover-effect">
