--- a/medio4.html
+++ b/medio4.html
@@ -322,7 +322,7 @@ http://www.templatemo.com/tm-512-moonlights
                     </div>
 
 
-                    <div class="row">]
+                    <div class="row">
 
                         <h3 style="color:white;">Terça</h3>
                         <div class="col-md-4 col-sm-6">
@@ -490,7 +490,7 @@ http://www.templatemo.com/tm-512-moonlights
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <div class="item" onclick="Multi-Aprendizado()">
+                            <div class="item" onclick="multi()">
                                 <div class="thumb">
 
                                     <div class="hover-effect">
@@ -712,7 +712,7 @@ http://www.templatemo.com/tm-512-moonlights
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <div class="item" onclick="Multi-Aprendizado()">
+                            <div class="item" onclick="multi()">
                                 <div class="thumb">
 
                                     <div class="hover-effect">
