--- a/AvançadoFluente3.html
+++ b/AvançadoFluente3.html
@@ -459,7 +459,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
@@ -682,7 +682,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
@@ -1018,7 +1018,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
@@ -1242,7 +1242,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
@@ -1579,7 +1579,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
@@ -1803,7 +1803,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
@@ -2144,7 +2144,7 @@ http://www.templatemo.com/tm-512-moonlights
 
                                     <div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>música(escolha)</h2>
+                                            <h2>listening(escolha)</h2>
                                             <p>25 a 32 minutos</p>
                                         </div>
                                     </div>
