--- a/index.html
+++ b/index.html
@@ -2424,7 +2424,7 @@ http://www.templatemo.com/tm-512-moonlights
 
     <div class="footer">
         <div class="content">
-            <p>Copyright &copy; 2018 Your Company . <a href="http://www.templatemo.com/tm-512-moonlight">Moonlight</a>
+            <p>Copyright &copy; 2023 Talk Now <a href="http://www.templatemo.com/tm-512-moonlight">Moonlight</a>
                 by <a href="http://www.html5max.com" target="_parent">HTML5 Max</a></p>
         </div>
     </div>
